--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ API_ID=API_ID
 API_HASH=API_HASH
 
 PROXY_URL=IF_BE_SET_IT_WILL_USE_PROXY_TO_CONNECT_TO_TELEGRAM
+
+# seperate them by '@'
+PROXY_CHANNELS=tt1@tt2@tt3
