--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ PROXY_URL=IF_BE_SET_IT_WILL_USE_PROXY_TO_CONNECT_TO_TELEGRAM
 
 # seperate them by '@'
 PROXY_CHANNELS=tt1@tt2@tt3
+
+GITHUB_TOKEN=
+REPO=
