--- a/.github/workflows/check-proxies-schedule .yaml
+++ b/.github/workflows/check-proxies-schedule .yaml
@@ -19,7 +19,5 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-          cache: "pip"
-      - run: |
-          pip install -r requirements.txt
+      - run:
           python checkProxies.py
