--- a/.github/workflows/check-proxies-schedule .yaml
+++ b/.github/workflows/check-proxies-schedule .yaml
@@ -15,9 +15,13 @@ jobs:
       REPO: ${{ secrets.REPO }}
       DEBUG_MODE: 0
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Install Python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run:
-          python checkProxies.py
+      - name: Install Dependencies
+        run: pip install -r requirements.txt
+        shell: bash
+      - name: check
+        run: python checkProxies.py
+        shell: bash
