--- a/.github/workflows/check-proxies-schedule .yaml
+++ b/.github/workflows/check-proxies-schedule .yaml
@@ -15,13 +15,15 @@ jobs:
       REPO: ${{ secrets.REPO }}
       DEBUG_MODE: 0
     steps:
+      - uses: actions/checkout@v3
       - name: Install Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+          cache: 'pip'
       - name: Install Dependencies
         run: pip install -r requirements.txt
         shell: bash
-      - name: check
+      - name: check urls
         run: python checkProxies.py
         shell: bash
