--- a/.github/workflows/check-proxies-schedule .yaml
+++ b/.github/workflows/check-proxies-schedule .yaml
@@ -2,7 +2,7 @@ name: check-proxies-schedule
 
 on:
   schedule:
-    - cron: "30 * * * *"
+    - cron: "*/30 * * * *"
   push:
     branches:
       - master
