--- a/.github/workflows/check-proxies-schedule .yaml
+++ b/.github/workflows/check-proxies-schedule .yaml
@@ -2,10 +2,10 @@ name: check-proxies-schedule
 
 on:
   schedule:
-    - cron: "*/30 * * * *"
-  push:
-    branches:
-      - master
+    - cron: "30 * * * *"
+#  push:
+#    branches:
+#      - master
 
 jobs:
   check-row-urls:
