--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ API_HASH=API_HASH
 
 PROXY_URL=IF_BE_SET_IT_WILL_USE_PROXY_TO_CONNECT_TO_TELEGRAM
 
-# seperate them by '@'
+# seperate them by '@' u can find some chaneles here: https://github.com/yebekhe/TelegramV2rayCollector
 PROXY_CHANNELS=tt1@tt2@tt3
 
 GITHUB_TOKEN=
