--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         build: .
         container_name: xray-proxy-grabber-telegram-python
         restart: unless-stopped
-        network_mode: host
+#        network_mode: host
         volumes:
             - ./v2ray-proxy-grabber-telegram.session:/v2ray-proxy-grabber-telegram.session
 
