--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # wont auto commit proxies and etc
 DEBUG_MODE=1
 
+# to get them, check out here: https://core.telegram.org/api/obtaining_api_id#obtaining-api-id
 API_ID=API_ID
 API_HASH=API_HASH
 
@@ -10,5 +11,6 @@ PROXY_URL=IF_BE_SET_IT_WILL_USE_PROXY_TO_CONNECT_TO_TELEGRAM
 # seperate them by '@' u can find some chaneles here: https://github.com/yebekhe/TelegramV2rayCollector
 PROXY_CHANNELS=tt1@tt2@tt3
 
+# https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#personal-access-tokens-classic
 GITHUB_TOKEN=
 REPO=
