Update check-proxies-schedule .yaml

--- a/.github/workflows/check-proxies-schedule .yaml
+++ b/.github/workflows/check-proxies-schedule .yaml
@@ -3,9 +3,11 @@ name: check-proxies-schedule
 on:
   schedule:
     - cron: "*/30 * * * *"
-#  push:
-#    branches:
-#      - master
+  push:
+     branches:
+       - master
+     paths:
+      - '**.yaml'
 
 jobs:
   check-row-urls:
