self hosted runner

--- a/.github/workflows/check-proxies-schedule .yaml
+++ b/.github/workflows/check-proxies-schedule .yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   check-row-urls:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
       GITHUB_TOKEN: ${{ secrets.GG_GITHUB_TOKEN }}
       REPO: ${{ secrets.REPO }}
